{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 87,
  "lineage": "030919a0-4021-3aea-770f-127bd62a7aee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ei",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e54bd0ee6aeaaa76",
            "domain": "vpc",
            "id": "eipalloc-0e54bd0ee6aeaaa76",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-71-137-212.compute-1.amazonaws.com",
            "public_ip": "52.71.137.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7daee6f468dc648",
            "association_id": "eipassoc-0e9d2c5e74a192587",
            "domain": "vpc",
            "id": "eipalloc-0c7daee6f468dc648",
            "instance": "i-030d10cd831b29d56",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0418306bab0186f11",
            "private_dns": "ip-192-168-1-16.ec2.internal",
            "private_ip": "192.168.1.16",
            "public_dns": "ec2-3-226-178-184.compute-1.amazonaws.com",
            "public_ip": "3.226.178.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046167836e57727ba",
            "association_id": "eipassoc-087e207d2ce387b49",
            "domain": "vpc",
            "id": "eipalloc-046167836e57727ba",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ac3e3309ae0c4d55",
            "private_dns": "ip-192-168-1-73.ec2.internal",
            "private_ip": "192.168.1.73",
            "public_dns": "ec2-184-73-67-45.compute-1.amazonaws.com",
            "public_ip": "184.73.67.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Elastic Ip "
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Elastic Ip "
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.this",
            "aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sql_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:501578882695:instance/i-030d10cd831b29d56",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030d10cd831b29d56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0418306bab0186f11",
            "private_dns": "ip-192-168-1-16.ec2.internal",
            "private_ip": "192.168.1.16",
            "public_ip": "3.226.178.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-097b408421c0b6e8e",
                "volume_size": 512,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041f515cc351f40e3",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Terraform_Win_Sql_Server"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Terraform_Win_Sql_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c423558d555cfce7"
            ]
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available_zones",
            "aws_security_group.sql_server",
            "aws_security_group.vpn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:501578882695:instance/i-0cde08e35cdc67ed2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cde08e35cdc67ed2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d2daeb3cc453a32c",
            "private_dns": "ip-192-168-0-25.ec2.internal",
            "private_ip": "192.168.0.25",
            "public_ip": "52.201.250.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b2dec713f8560ae5",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e462a2cc0cb6020c",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Terraform_ubuntu_VPN"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Terraform_ubuntu_VPN"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa3688fcfef2606f"
            ]
          },
          "dependencies": [
            "aws_security_group.vpn",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501578882695:internet-gateway/igw-02dc49649ebbbddbe",
            "id": "igw-02dc49649ebbbddbe",
            "owner_id": "501578882695",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW "
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW "
            },
            "vpc_id": "vpc-0ffc09e031391938c"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-046167836e57727ba",
            "connectivity_type": "public",
            "id": "nat-06106c599ad5e1a39",
            "network_interface_id": "eni-0ac3e3309ae0c4d55",
            "private_ip": "192.168.1.73",
            "public_ip": "184.73.67.45",
            "subnet_id": "subnet-041f515cc351f40e3",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Terraform NGW"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Terraform NGW"
            }
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02dc49649ebbbddbe",
            "id": "r-rtb-08906a253b891dca51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08906a253b891dca5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501578882695:route-table/rtb-034864eb4d11db038",
            "id": "rtb-034864eb4d11db038",
            "owner_id": "501578882695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06106c599ad5e1a39",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Terraform Private "
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Terraform Private "
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc09e031391938c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available_zones",
            "aws_eip.gateway",
            "aws_internet_gateway.this",
            "aws_nat_gateway.gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501578882695:route-table/rtb-0c623c82525eaea33",
            "id": "rtb-0c623c82525eaea33",
            "owner_id": "501578882695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02dc49649ebbbddbe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Terraform Public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Terraform Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc09e031391938c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4628fe5f2fbfa5f",
            "route_table_id": "rtb-034864eb4d11db038",
            "subnet_id": "subnet-041f515cc351f40e3"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "aws_eip.gateway",
            "aws_internet_gateway.this",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e46c44571e36709",
            "route_table_id": "rtb-0c623c82525eaea33",
            "subnet_id": "subnet-0e462a2cc0cb6020c"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sql_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501578882695:security-group/sg-0c423558d555cfce7",
            "description": "sql_server machine",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c423558d555cfce7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa3688fcfef2606f"
                ],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3177,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa3688fcfef2606f"
                ],
                "self": false,
                "to_port": 3177
              }
            ],
            "name": "sql_server",
            "name_prefix": "",
            "owner_id": "501578882695",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Sql_server"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Sql_server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc09e031391938c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpn",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501578882695:security-group/sg-0fa3688fcfef2606f",
            "description": "vpn machine",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa3688fcfef2606f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 13690,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 13690
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpn",
            "name_prefix": "",
            "owner_id": "501578882695",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Sql_server"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Sql_server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc09e031391938c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501578882695:subnet/subnet-041f515cc351f40e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041f515cc351f40e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501578882695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Private A"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Private A"
            },
            "vpc_id": "vpc-0ffc09e031391938c"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501578882695:subnet/subnet-0e462a2cc0cb6020c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e462a2cc0cb6020c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "501578882695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Public A"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Public A"
            },
            "vpc_id": "vpc-0ffc09e031391938c"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501578882695:vpc/vpc-0ffc09e031391938c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c4fab137ac96eb28",
            "default_route_table_id": "rtb-08906a253b891dca5",
            "default_security_group_id": "sg-0b76a5dc9d230af8c",
            "dhcp_options_id": "dopt-0fd8bd79714f45133",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ffc09e031391938c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08906a253b891dca5",
            "owner_id": "501578882695",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC "
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC "
            }
          }
        }
      ]
    }
  ]
}